--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <header class="header">
   <div class="header-content">
 
-    <img src="images/logo.png" alt="Dattatray Systems Logo" class="logo-front">
+    <img src="images/Logo.png" alt="Dattatray Systems Logo" class="logo-front">
 
     <p class="tagline">
       Your Office. Our printing expertise
@@ -139,3 +139,4 @@
 
 </body>
 </html>
+
